# mcp-observatory

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: architecture.md  observation-v1.md  research-boundaries.md
examples/: history.jsonl  inventory-after.json  inventory-before.json  observation-filesystem.json  targets.jsonl
include/observatory/: history.hpp  inventory.hpp  observation.hpp  target_manifest.hpp
src/: history.cpp  inventory.cpp  main.cpp  observation.cpp  target_manifest.cpp
tests/: test_main.cpp
